--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Cabin', sans-serif;
-  background-image: url("images/daniel-roe-30147-unsplash.jpg");
+  background-image: url("images/background_cover.jpg");
   background-size: cover;
 }
 
